# rl_us_navigation

./: README.md  main.py  polyaxonfile.yaml  polyaxonfile_group.yaml  requirements.txt
pre_processed_code_snippets/DataFormatting/: create_lego_file.py  create_patient_file.py  image_processing  mat2csv.py  rename_frames.py
pre_processed_code_snippets/TrackingPlugIn/: CMakeLists.txt  README.md
pre_processed_code_snippets/TrackingPlugIn/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
pre_processed_code_snippets/TrackingPlugIn/build2/tracking_plug_in_autogen/: moc_predefs.h  mocs_compilation.cpp
pre_processed_code_snippets/TrackingPlugIn/build2/tracking_plug_in_autogen/5EYGZNRXMQ/: moc_controller.cpp
pre_processed_code_snippets/TrackingPlugIn/build2/tracking_plug_in_autogen/include/: ui_controller.h
pre_processed_code_snippets/TrackingPlugIn/include/tracking_plug_in/: algorithm.hpp  controller.hpp  factory.hpp  plugin.hpp
pre_processed_code_snippets/TrackingPlugIn/src/: algorithm.cpp  controller.cpp  controller.ui  factory.cpp  plugin.cpp
tensorboards/Sep23_10-11-35_Rachet-testing_stuff/: events.out.tfevents.1569233495.plx-26fc5878be834c9aa264b90a785b22ab-master-0
tensorboards/Sep25_12-27-59_Rachet-prioritized_replay_memory/: events.out.tfevents.1569414479.plx-9cf14aa708534587a2cf4d3ee8f0d7de-master-0
utils/: DQN_utils.py  ResNet18.py  environment_utils.py  memory.py  memory_opt.py  utility_functions.py  visualization.py
